
[package]
name = "libpool"
version = "0.1.0"
authors = ["zTgx <747674262@qq.com>"]
edition = "2018"
repository = "https://github.com/libpool-rs.git"
readme = "README.md"
keywords = [ "threadpool" ]
categories = [ "asynchronous" ]
license = "MIT/Apache-2.0"
exclude = [ "/.travis.yml" ]
description = "A simple threadpool"

[dependencies]
